removes redundant packages and components

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@scaffold-eth/monorepo",
+  "name": "@signchain/monorepo",
   "version": "1.0.0",
   "keywords": [
     "ethereum",
@@ -11,28 +11,25 @@
   "private": true,
   "scripts": {
     "ceramic": "ceramic daemon",
-    "react-app:build": "yarn workspace @scaffold-eth/react-app build --max-old-space-size=12288",
-    "react-app:eject": "yarn workspace @scaffold-eth/react-app eject",
-    "react-app:start": "yarn workspace @scaffold-eth/react-app start",
-    "react-app:test": "yarn workspace @scaffold-eth/react-app test",
-    "build": "yarn workspace @scaffold-eth/react-app build --max-old-space-size=12288",
-    "chain": "yarn workspace @scaffold-eth/buidler chain",
-    "node": "yarn workspace @scaffold-eth/buidler chain",
-    "test": "yarn workspace @scaffold-eth/buidler test",
-    "start": "yarn workspace @scaffold-eth/react-app start",
-    "compile": "yarn workspace @scaffold-eth/buidler compile",
-    "deploy": "yarn workspace @scaffold-eth/buidler deploy",
-    "watch": "yarn workspace @scaffold-eth/buidler watch",
-    "accounts": "yarn workspace @scaffold-eth/buidler accounts",
-    "balance": "yarn workspace @scaffold-eth/buidler balance",
-    "send": "yarn workspace @scaffold-eth/buidler send",
-    "ipfs": "yarn workspace @scaffold-eth/react-app ipfs",
-    "surge": "yarn workspace @scaffold-eth/react-app surge",
-    "s3": "yarn workspace @scaffold-eth/react-app s3",
-    "ship": "yarn workspace @scaffold-eth/react-app ship",
-    "generate": "cd packages/buidler && npx buidler generate",
-    "account": "cd packages/buidler && npx buidler account",
-    "flatten": "cd packages/buidler && npx buidler flatten"
+    "react-app:build": "yarn workspace @signchain/react-app build --max-old-space-size=12288",
+    "react-app:eject": "yarn workspace @signchain/react-app eject",
+    "react-app:start": "yarn workspace @signchain/react-app start",
+    "react-app:test": "yarn workspace @signchain/react-app test",
+    "build": "yarn workspace @signchain/react-app build --max-old-space-size=12288",
+    "chain": "yarn workspace @signchain/hardhat chain",
+    "node": "yarn workspace @signchain/hardhat chain",
+    "test": "yarn workspace @signchain/hardhat test",
+    "start": "yarn workspace @signchain/react-app start",
+    "compile": "yarn workspace @signchain/hardhat compile",
+    "deploy": "yarn workspace @signchain/hardhat deploy",
+    "watch": "yarn workspace @signchain/hardhat watch",
+    "accounts": "yarn workspace @signchain/hardhat accounts",
+    "balance": "yarn workspace @signchain/hardhat balance",
+    "send": "yarn workspace @signchain/hardhat send",
+    "ipfs": "yarn workspace @signchain/react-app ipfs",
+    "generate": "cd packages/hardhat && npx hardhat generate",
+    "account": "cd packages/hardhat && npx hardhat account",
+    "flatten": "cd packages/hardhat && npx hardhat flatten"
   },
   "workspaces": {
     "packages": [
