--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@scaffold-eth/react-app",
+  "name": "@signchain/react-app",
   "version": "1.0.0",
   "homepage": ".",
   "browserslist": {
@@ -16,7 +16,6 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
-    "@apollo/react-hooks": "^3.1.3",
     "@ceramicnetwork/ceramic-http-client": "^0.6.5",
     "@ceramicstudio/idx": "^0.2.1",
     "@ceramicstudio/idx-schemas": "^0.1.5",
@@ -30,35 +29,23 @@
     "@fleekhq/fleek-storage-js": "^1.0.2",
     "@textile/hub": "^1.0.0",
     "@ramp-network/ramp-instant-sdk": "^1.8.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "@uniswap/sdk": "^3.0.1",
     "@walletconnect/web3-provider": "^1.0.0-beta.47",
     "antd": "^4.5.0",
-    "apollo-boost": "^0.4.7",
-    "apollo-client": "^2.6.8",
-    "apollo-utilities": "^1.3.3",
     "aws-sdk": "^2.750.0",
     "axios": "^0.19.2",
     "bnc-notify": "^1.3.0",
-    "burner-provider": "^1.0.38",
-    "dotenv": "^8.2.0",
     "eccrypto": "^1.1.5",
     "eth-hooks": "^1.1.2",
-    "graphql": "^14.6.0",
     "identity-wallet": "^2.0.0-alpha.13",
     "js-file-download": "^0.4.12",
-    "qrcode.react": "^1.0.0",
-    "react": "16.12.0",
+    "react": "^16.12.0",
     "react-blockies": "^1.4.1",
-    "react-dom": "16.12.0",
-    "react-qr-reader": "^2.2.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.3.1",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.1",
-    "universal-cookie": "^4.0.3",
     "wallet-besu": "^1.0.2",
     "web3modal": "^1.5.0"
   },
@@ -72,9 +59,7 @@
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-prettier": "^3.1.4",
     "ipfs-http-client": "^45.0.0",
-    "prettier": "^2.0.5",
-    "s3-folder-upload": "^2.3.1",
-    "surge": "^0.21.5"
+    "prettier": "^2.0.5"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -85,9 +70,6 @@
     "start": "react-scripts start",
     "test": "react-scripts test",
     "lint": "eslint --config ./.eslintrc.js --ignore-path ./.eslintignore ./src/**/*",
-    "ipfs": "node ./scripts/ipfs.js",
-    "surge": "surge ./build",
-    "s3": "node ./scripts/s3.js",
-    "ship": "yarn surge"
+    "ipfs": "node ./scripts/ipfs.js"
   }
 }
