--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,8 @@ packages/buidler/*.txt
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 **/node_modules
-packages/buidler/artifacts
-packages/react-app/src/contracts
-packages/buidler/cache
+packages/hardhat/artifacts/
+packages/hardhat/cache
 
 # dependencies
 /node_modules
