--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ packages/buidler/*.txt
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 **/node_modules
 packages/hardhat/artifacts/
-packages/hardhat/cache
+packages/hardhat/cache/
 
 # dependencies
 /node_modules
