--- a/packages/middleware/package.json
+++ b/packages/middleware/package.json
@@ -7,12 +7,13 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
+    "@sendgrid/mail": "^7.4.1",
     "cors": "^2.8.5",
-    "socket.io": "^3.0.5",
     "dotenv": "^8.2.0",
     "emittery": "^0.8.1",
-    "nodemon": "^2.0.7"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7",
+    "socket.io": "^3.0.5"
   },
   "author": "",
   "license": "ISC"
