--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -16,8 +16,8 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
-    "@ceramicnetwork/http-client": "^0.8.10",
-    "@ceramicstudio/idx": "^0.5.2",
+    "@ceramicnetwork/http-client": "^0.9.2",
+    "@ceramicstudio/idx": "^0.6.0",
     "@ceramicstudio/idx-tools": "^0.5.0",
     "@ethersproject/address": "^5.0.2",
     "@ethersproject/bignumber": "^5.0.5",
@@ -34,6 +34,7 @@
     "antd": "^4.5.0",
     "aws-sdk": "^2.750.0",
     "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
     "bnc-notify": "^1.3.0",
     "dids": "^1.1.1",
     "eccrypto": "^1.1.5",
@@ -49,11 +50,10 @@
     "react-scripts": "3.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.1",
+    "socket.io-client": "^3.0.5",
     "uint8arrays": "^2.0.5",
     "wallet-besu": "^1.0.2",
-    "web3modal": "^1.5.0",
-    "bcryptjs": "^2.4.3",
-    "socket.io-client": "^3.0.5"
+    "web3modal": "^1.5.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^6.12.2",
