--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -46,6 +46,7 @@
     "react": "^16.12.0",
     "react-blockies": "^1.4.1",
     "react-dom": "^16.12.0",
+    "react-icons": "^4.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "semantic-ui-css": "^2.4.1",
