--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -43,6 +43,7 @@
     "identity-wallet": "^2.0.0-alpha.13",
     "js-file-download": "^0.4.12",
     "key-did-provider-ed25519": "^1.0.0",
+    "moment": "^2.29.1",
     "react": "^16.12.0",
     "react-blockies": "^1.4.1",
     "react-dom": "^16.12.0",
